tests/neg-custom-args/captures/scoped-caps.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:7:20 -----------------------------------
7 |  val g: A^ -> B^ = f // error
  |                    ^
  |                    Found:    (f : (x: A^) -> B^²)
  |                    Required: A^ -> B^³
  |
  |                    Note that capability cap is not included in capture set {cap²}
  |                    because cap is not visible from cap² in value g.
  |
  |                    where:    ^    refers to the universal root capability
  |                              ^²   refers to a root capability associated with the result type of (x: A^): B^²
  |                              ^³   refers to a fresh root capability in the type of value g
  |                              cap  is a root capability associated with the result type of (x: A^): B^²
  |                              cap² is a fresh root capability in the type of value g
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:9:25 -----------------------------------
9 |  val _: (x: A^) -> B^ = g // error
  |                         ^
  |                         Found:    A^ -> B^{g*}
  |                         Required: (x: A^) -> B^²
  |
  |                         Note that capability g* is not included in capture set {cap}.
  |
  |                         Note that the existential capture root in B^
  |                         cannot subsume the capability g* since that capability is not a `Sharable` capability..
  |
  |                         where:    ^   refers to the universal root capability
  |                                   ^²  refers to a root capability associated with the result type of (x: A^): B^²
  |                                   cap is a root capability associated with the result type of (x: A^): B^²
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:10:20 ----------------------------------
10 |  val _: A^ -> B^ = f // error
   |                    ^
   |                    Found:    (f : (x: A^) -> B^²)
   |                    Required: A^ -> B^³
   |
   |                    Note that capability cap is not included in capture set {cap²}
   |                    because cap is not visible from cap² in value _$3.
   |
   |                    where:    ^    refers to the universal root capability
   |                              ^²   refers to a root capability associated with the result type of (x: A^): B^²
   |                              ^³   refers to a fresh root capability in the type of value _$3
   |                              cap  is a root capability associated with the result type of (x: A^): B^²
   |                              cap² is a fresh root capability in the type of value _$3
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:12:20 ----------------------------------
12 |  val _: A^ -> B^ = x => g(x)      // error: g is no longer pure, since it contains the ^ of B
   |                    ^^^^^^^^^
   |                    Found:    (x: A^) ->{g} B^²
   |                    Required: A^ -> B^³
   |
   |                    Note that capability g is not included in capture set {}.
   |
   |                    where:    ^  refers to the universal root capability
   |                              ^² refers to a root capability associated with the result type of (x: A^): B^²
   |                              ^³ refers to a fresh root capability in the type of value _$5
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:16:24 ----------------------------------
16 |  val _: (x: S) -> B^ = h          // error: direct conversion fails
   |                        ^
   |                       Found:    S^ -> B^{h*}
   |                       Required: (x: S^) -> B^²
   |
   |                       Note that capability h* is not included in capture set {cap}.
   |
   |                       Note that the existential capture root in B^
   |                       cannot subsume the capability h* since that capability is not a `Sharable` capability..
   |
   |                       where:    ^   refers to the universal root capability
   |                                 ^²  refers to a root capability associated with the result type of (x: S^): B^²
   |                                 cap is a root capability associated with the result type of (x: S^): B^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:17:24 ----------------------------------
17 |  val _: (x: S) -> B^ = (x: S) => h(x)  // error: eta expansion fails
   |                        ^^^^^^^^^^^^^^
   |                        Found:    (x: S^) ->{h} B^²
   |                        Required: (x: S^) -> B^³
   |
   |                        Note that capability h is not included in capture set {}.
   |
   |                        where:    ^  refers to the universal root capability
   |                                  ^² refers to a root capability associated with the result type of (x: S^): B^²
   |                                  ^³ refers to a root capability associated with the result type of (x: S^): B^³
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:21:23 ----------------------------------
21 |  val _: (x: S) -> S = (x: S) => h2(x)  // error: eta conversion fails since `h2` is now impure (result type S is a capability)
   |                       ^^^^^^^^^^^^^^^
   |                       Found:    (x: S^) ->{h2} S^²
   |                       Required: (x: S^) -> S^³
   |
   |                       Note that capability h2 is not included in capture set {}.
   |
   |                       where:    ^  refers to the universal root capability
   |                                 ^² refers to a root capability associated with the result type of (x: S^): S^²
   |                                 ^³ refers to a root capability associated with the result type of (x: S^): S^³
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:27:19 ----------------------------------
27 |  val _: S -> B^ = j               // error
   |                   ^
   |                   Found:    (j : (x: S) -> B^)
   |                   Required: S^² -> B^³
   |
   |                   Note that capability cap is not included in capture set {cap²}
   |                   because cap is not visible from cap² in value _$14.
   |
   |                   where:    ^    refers to a root capability associated with the result type of (x: S^²): B^
   |                             ^²   refers to the universal root capability
   |                             ^³   refers to a fresh root capability in the type of value _$14
   |                             cap  is a root capability associated with the result type of (x: S^²): B^
   |                             cap² is a fresh root capability in the type of value _$14
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:28:19 ----------------------------------
28 |  val _: S -> B^ = x => j(x)       // error
   |                   ^^^^^^^^^
   |                   Found:    (x: S^) ->'s1 B^²
   |                   Required: S^ -> B^³
   |
   |                   Note that capability cap is not included in capture set {cap²}
   |                   because cap is not visible from cap² in value _$15.
   |
   |                   where:    ^    refers to the universal root capability
   |                             ^²   refers to a root capability associated with the result type of (x: S^): B^²
   |                             ^³   refers to a fresh root capability in the type of value _$15
   |                             cap  is a root capability associated with the result type of (x: S^): B^²
   |                             cap² is a fresh root capability in the type of value _$15
   |
   | longer explanation available when compiling with `-explain`
